--- a/css/app.css
+++ b/css/app.css
@@ -2,6 +2,7 @@
 	background-color: #99c2ff;
 	border-radius: 2px;
 	border: 2px solid #66a3ff;
+	width: 50%;
 }
 .todo-input{
 	font-size: 16px;
@@ -23,5 +24,5 @@
 	background-color: silver;
 }
 .todo-list{
-	
+
 }
