--- a/css/app.css
+++ b/css/app.css
@@ -3,10 +3,24 @@
 	border-radius: 2px;
 	border: 2px solid #66a3ff;
 	width: 50%;
+	padding: 10px;
+	position: relative;
+	left: 50%;
+	top: 45%;
+	transform: translate(-50%, 45%);
+}
+.todo-select{
+	height: 40px;
+	width: 50px;
+	text-align: center;
+	background-color: white;
+    border: 1px solid black;
+    border-radius: 2px;
 }
 .todo-input{
 	font-size: 16px;
 	width: 75%;
+	height: 40px;
 	padding: 10px;
 	color: #404040;
     background-color: white;
@@ -19,6 +33,10 @@
 	background-color: white;
     border: 1px solid black;
     border-radius: 2px;
+    text-align: center;
+    width: 100px;
+    height: 40px;
+    font-size: 16px;
 }
 .add-btn:hover{
 	background-color: silver;
