Modified input panel styles in app.css

--- a/css/login.css
+++ b/css/login.css
@@ -51,8 +51,10 @@
 input{
     font-size: 14px;
 }
-input[type=text],
-input[type=password]{
+/*input[type=text],
+input[type=password]*/
+.username,
+.password{
     margin: 5px;
     padding: 0 10px;
     width: 200px;
