--- a/css/app.css
+++ b/css/app.css
@@ -10,33 +10,34 @@
 	transform: translate(-50%, 45%);
 	text-align: center;
 }
-.todo-select{
-	height: 40px;
-	width: 50px;
-	text-align: center;
-	background-color: white;
+.todo-select,
+.todo-input,
+.add-btn{
+	border-radius: 2px;
+    display: inline-block;
+    vertical-align: middle;
     border: 1px solid black;
-    border-radius: 2px;
+    background-color: white;
+    height: 40px;
+}
+.todo-select{
+	width: 100px;
+	text-align: center;
+	cursor: pointer;
 }
 .todo-input{
 	font-size: 16px;
-	width: 75%;
-	height: 40px;
+	width: 60%;
 	padding: 10px;
 	color: #404040;
-    background-color: white;
-    border: 2px solid black;
-    border-radius: 2px;
+	margin-left: 10px;
+	margin-right: 10px;
 }
 .add-btn{
 	cursor: pointer;
 	transition: 0.5s;
-	background-color: white;
-    border: 1px solid black;
-    border-radius: 2px;
     text-align: center;
     width: 100px;
-    height: 40px;
     font-size: 16px;
 }
 .add-btn:hover{
