--- a/css/app.css
+++ b/css/app.css
@@ -33,28 +33,34 @@
 	margin-left: 10px;
 	margin-right: 10px;
 }
-.add-btn{
+.add-btn,
+.delete-btn{
 	cursor: pointer;
 	transition: 0.5s;
-    text-align: center;
-    width: 100px;
+	text-align: center;
+}
+.add-btn{
+	width: 100px;
     font-size: 16px;
 }
 .add-btn:hover{
-	background-color: silver;
-}
-.todo-list{
-
-}
-.editable{
-
+	background-color: #1a75ff;
 }
 .delete-btn{
 	background-color: #99c2ff;
 	color: white;
 	border-radius: 2px;
-	cursor: pointer;
+	border: 1px solid #66a3ff;
+	font-size: 12px;
+	height: 30px;
+	width: 80px;
 }
 .delete-btn:hover{
+	background-color: #1a75ff;
+}
+.todo-list{
+
+}
+.editable{
 
 }
